testsuite/tests/grammar/invalid_derivation_loop/test.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(N1("example") | N2("null"))
}

@abstract class FooNode implements Node[FooNode] {
}

class N1 : N2 {
}

class N2 : N1 {
}
