testsuite/tests/grammar/invalid_derivation_loop/test.out
== test.lkt ==
test.lkt:11:1: error: Type inheritance loop detected
11 | class N1 : N2 {
   | ^


Done
